k8s/apps/home-automation/zwavejs2mqtt/virtual-service.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: zwave2mqtt
  namespace: home-automation
spec:
  hosts:
    - 'zwavejs2mqtt.${SECRET_DOMAIN}'
  gateways:
    - istio-system/istio-ingressgateway
  http:
    - route:
        - destination:
            port:
              number: 8091
            host: zwavejs2mqtt.home-automation.svc.cluster.local
          weight: 100
          headers:
            response:
              set:
                Referrer-Policy: no-referrer
                X-Content-Type-Options: nosniff
                X-DNS-Prefetch-Control: 'off'
                X-Download-Options: noopen
                X-Frame-Options: deny
                X-XSS-Protection: 1; mode=block
